--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ motor = { extras = ["srv"], version = "^3.2.0" }
 pymongo = { extras = ["srv"], version = "^4.2.0" }
 python-dotenv = "^0.20.0"
 d20 = "^1.1.2"
+pint = "^0.22"
+quantulum3 = {version = "^0.9.0", extras = ["classifier"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
