--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python-dotenv = "^0.20.0"
 d20 = "^1.1.2"
 pint = "^0.22"
 quantulum3 = {version = "^0.9.0", extras = ["classifier"]}
+matplotlib = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
