--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ python = "^3.11.7"
 ] }
 jishaku = "^2.5.2"
 uvloop = { version = "^0.19.0", platform = "linux" }
-rapidfuzz = "^3.5.2"
+rapidfuzz = { git = "https://github.com/rapidfuzz/RapidFuzz", rev = "master"}
 motor = { extras = ["srv"], version = "^3.3.2" }
 pymongo = { extras = ["srv"], version = "^4.6.1" }
 python-dotenv = "^1.0.0"
